# TM-service

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
task_manager/task_manager/: settings.py  urls.py
task_manager/tasks/: models.py  serializers.py  tests.py  views.py
