[tool.poetry]
name = "TM"
version = "1.0"
description = "Service for managing tasks within the company"
authors = ["cyberlain <zachetnydrakon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
djangorestframework = "^3.15"
djangorestframework-simplejwt = "^5.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
